choose media options in lp

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/content_section1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/content_section1.html
@@ -47,7 +47,7 @@
     							
     							<div class="videoWrapper">
                                     <img  width="560" height="315" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/lp-video-thumb.jpg" data-video="" title="Play Video" class="video_placeholder img-responsive "/>
-    								<div class="frameCover" data-type="video"></div>
+    								<div class="frameCover choose-media-options" data-type="video"></div>
                                     <button class="video__button"></button>
     							</div>
     						
