--- a/agile-frontend/WebContent/flatfull/tpl/new-deal-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/new-deal-modal.html
@@ -120,6 +120,24 @@
               </select></span><img class="loading-img" src="//doxhze3l6s7v9.cloudfront.net/app/static/img/21-0.gif" style="display:none;"></img>
             </div>
           </div>
+          <div class="control-group form-group">
+            <label class="control-label col-sm-3">{{agile_lng_translate 'deal-view' 'type'}}</label>
+            <div class="controls col-sm-7" style="height:32px;overflow:hidden;">
+              <span><input type="text" id="color1" name="color1" value="#FFFFFF" class=" required form-control hide" />
+              </span>
+              <div id="deal-checkboxes-div" style="margin-top:8px;">
+                <div class="bcp-select" id="E1BEE7" style="background-color: #E1BEE7;"><div class=""></div></div>
+                <div class="bcp-select" id="C5CAE9" style="background-color: #C5CAE9;"><div class=""></div></div>
+                <div class="bcp-select" id="BBDEFB" style="background-color: #BBDEFB;"><div class=""></div></div>
+                <div class="bcp-select" id="C8E6C9" style="background-color: #C8E6C9;"><div class=""></div></div>
+                <div class="bcp-select" id="FFF9C4" style="background-color: #FFF9C4;"><div class=""></div></div>
+                <div class="bcp-select" id="FFE0B2" style="background-color: #FFE0B2;"><div class=""></div></div>
+                <div class="bcp-select" id="FFCDD2" style="background-color: #FFCDD2;"><div class=""></div></div>
+                <div class="bcp-select" id="D7CCC8" style="background-color: #D7CCC8;"><div class=""></div></div>
+                <div class="bcp-select" id="E0E0E0" style="background-color: #E0E0E0;"><div class=""></div></div>
+              </div>
+            </div>
+          </div>
           <div class="control-group form-group hidden" id="deal_lost_reason">
             <label class="control-label col-sm-3">{{agile_lng_translate 'deal-view' 'loss-reason'}}
             </label>
