font style change issue

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/content_section12.html
@@ -38,7 +38,7 @@
                                 </h1>
                             </div>
                             <div class=" text-center editContent" style=" margin: 0px 0px 50px 0px;
-                                ">Generate leads. Close deals. Support customers.</div>
+                                "><p>Generate leads. Close deals. Support customers.</p></div>
                             
                             <div class="text-center">
                                 <img class="img-responsive" src="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/image1.png" alt="Image 1"  ="img">
