--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header1.html
@@ -35,7 +35,7 @@
                                    Sell & Market like Fortune 500
     						    </h1>
                             </div> 
-                            <div class="text-center editContent" style="margin: 0px 0px 70px 0px;">      All-in-one CRM. Sales, Marketing and  Service.                                
+                            <div class="text-center editContent" style="margin: 0px 0px 70px 0px;">      <p>All-in-one CRM. Sales, Marketing and  Service.</p>                                
                             </div>  					
     						<div class="text-center margin-bottom-100">
     							<a href="#" class="btn btn-info btn-hg btn-embossed"><span class="fa fa-info-circle"></span> Learn more</a>
