--- a/agile-frontend/WebContent/misc/pagebuilder/elements/header2.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/header2.html
@@ -34,7 +34,7 @@
                             </div>
     					
     						<div class="editContent">
-    							Proin ullamcorper non neque nec lacinia. Praesent sodales libero accumsan pulvinar tempus. Proin nec lacus enim. Vivamus ullamcorper iaculis arcu et semper. Nulla venenatis nibh sed ligula placerat bibendum. Suspendisse malesuada enim eget elit congue rutrum.
+    							<p>Proin ullamcorper non neque nec lacinia. Praesent sodales libero accumsan pulvinar tempus. Proin nec lacus enim. Vivamus ullamcorper iaculis arcu et semper. Nulla venenatis nibh sed ligula placerat bibendum. Suspendisse malesuada enim eget elit congue rutrum.</p>
     						</div>
     					
     						<a href="#" class="btn btn-primary btn-embossed btn-wide"><span class="fa fa-arrow-circle-o-right"></span> Learn more</a>
