--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp1.html
@@ -39,7 +39,8 @@
                      </div>
                      <div class="col-sm-6 col-lg-6">
                         <div class="col-image-holder">
-                           <img style="height:370px;" alt="" class="img-responsive" height="800" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp1img1.png" width="">
+                           <img style="height:370px;" alt="" class="img-responsive" height="800" 
+                           src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp1img1.png" width="">
                         </div>
                      </div>
                   </div>
