--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp4.html
@@ -54,7 +54,7 @@
                               <span class="fa fa-rss" style="font-size:2em;" ></span>
                            </div>
                            <div class="col-xs-9 half-gutter">
-                              <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Raise your convetions </h4> </div>
+                              <div class="editContent"> <h4 style="margin-top: 0; font-size: 21px;">Raise your conventions </h4> </div>
                                <div class="editContent"><p>Trouble completing the download ? Oren kjust want to say hi . Send us your mekis message in day .</p></div>
                            </div>
                         </div>
