--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
@@ -16,7 +16,7 @@
             <div class="container">
                <div class="row">
                   <div class="editContent">
-                     <h1 style=" margin: 0 0 15px 0;">Contact us at your convience</h1>
+                     <h1 style=" margin: 0 0 15px 0;">Contact us at your convenience</h1>
                   </div>
                   <div class="editContent" style=" line-height: 1.4;color: #8f96a9;">
                      <p style="font-size: 14px;">Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem  lucilius. Soleat interesset   mea cu, eum regione menandri definitionem no.
@@ -33,10 +33,10 @@
                         </div>
                         <div class=" col-xs-9 half-gutter">
                            <div style="" class=" editContent ">
-                              QUESTION ? CALL US.
+                              <p>QUESTION ? CALL US.</p>
                            </div>
                            <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" ><p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</p></div>
-                           <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" >TOLL FREE: 123-456-7890</div>
+                           <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" ><p>TOLL FREE: 123-456-7890</p></div>
                         </div>
                      </div>
                   </div>
@@ -51,10 +51,10 @@
                         </div>
                        <div class=" col-xs-9 half-gutter">
                            <div style="" class=" editContent ">
-                              QUESTION ? CALL US.
+                              <p>QUESTION ? CALL US.</p>
                            </div>
                            <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" ><p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</p></div>
-                           <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" >TOLL FREE: 123-456-7890</div>
+                           <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" ><p>TOLL FREE: 123-456-7890</p></div>
                         </div>
                      </div>
                   </div>
