live path in new block

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
@@ -4,7 +4,7 @@
       <title>Header</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/elements.min.css" rel="stylesheet">
-      <link href="http://localhost:8888/misc/pagebuilder/source/elements/css/newtemplate.css" rel="stylesheet">
+      <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/newtemplate.css" rel="stylesheet">
       <link  href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico" rel="shortcut icon">
       <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8" id="mediumCss0">
       <link rel="stylesheet" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/css/medium-bootstrap.css" type="text/css" media="screen" charset="utf-8" id="mediumCss1">
