--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp15.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp15.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/elements.min.css" rel="stylesheet">
       <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/style-footers.css" rel="stylesheet">
-      <link href="https://sonali-dot-sandbox-dot-agilecrmbeta.appspot.com/misc/pagebuilder/source/build/css/newtemplate.css" rel="stylesheet">
+      <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/newtemplate.css" rel="stylesheet">
       <link rel="shortcut icon" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico">
       
    </head>
