--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp9.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp9.html
@@ -5,7 +5,7 @@
       <title>Header</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/elements.min.css" rel="stylesheet">
-      <link href="http://localhost:8888/misc/pagebuilder/source/elements/css/newtemplate.css" rel="stylesheet">
+      <link href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/css/newtemplate.css" rel="stylesheet">
       <link rel="shortcut icon" href="https://s3.amazonaws.com/agilecrm/pagebuilder/static/elements/images/favicon.ico">
       <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
       <!--[if lt IE 9]>
