--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp7.html
@@ -33,7 +33,7 @@
                         </div>
                         <div class=" col-xs-9 half-gutter">
                            <div style="" class=" editContent ">
-                              <p>QUESTION ? CALL US.</p>
+                              <p style="margin-bottom: 0px;">QUESTION ? CALL US.</p>
                            </div>
                            <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" ><p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</p></div>
                            <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" ><p>TOLL FREE: 123-456-7890</p></div>
@@ -51,7 +51,7 @@
                         </div>
                        <div class=" col-xs-9 half-gutter">
                            <div style="" class=" editContent ">
-                              <p>QUESTION ? CALL US.</p>
+                              <p style="margin-bottom: 0px;">QUESTION ? CALL US.</p>
                            </div>
                            <div class="editContent" style="line-height: 1.4; color: rgb(143, 150, 169); font-size: 14px;" ><p style="font-size: 14px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh neque, convallis ut interdum a, consequat sit amet mauris. Vivamus sed tincidunt enim.</p></div>
                            <div class="editContent" style="color: rgb(23, 196, 187); font-size: 14px; font-weight: bold;" ><p>TOLL FREE: 123-456-7890</p></div>
