--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
@@ -17,7 +17,7 @@
                   <div class="row">
                      <div class="col-sm-6 col-lg-6">
                         <div class="col-image-holder">
-                           <img style="height:370px;" alt="" class="img-responsive"  ="img" height="800" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp12img1.png" width="">
+                           <img style="height:370px;" alt="" class="img-responsive choose-media-options"  ="img" height="800" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp12img1.png" width="">
                         </div>
                      </div>
                      <div class="col-md-6 col-sm-6">
