--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
@@ -21,8 +21,8 @@
                   <div class="col-md-6 videobtn-resp">
                      <br>
                      <div class="videoWrapper">
-                        <img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/lp-video-thumb.jpg" data-video="" width="500" height="281" title="Play Video" class="video_placeholder img-responsive" style="outline: none; cursor: inherit;">
-                        <div class="frameCover" data-type="video"></div>
+                        <img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/lp-video-thumb.jpg" data-video="" width="500" height="281" title="Play Video" class="video_placeholder img-responsive " style="outline: none; cursor: inherit;">
+                        <div class="frameCover choose-media-options" data-type="video"></div>
                         <button class="video__button"></button>
                      </div>
                   </div>
