--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp13.html
@@ -33,7 +33,7 @@
                         </div>
                          <div class="col-md-6 col-sm-6">
                             <div class="iphone-2">
-                                <img class="img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp13img1.png" alt="">
+                                <img class=" choose-media-options img-responsive" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp13img1.png" alt="">
                             </div>
                         </div>
                     </div>
