--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp3.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp3.html
@@ -18,7 +18,7 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="iphone-2">
-                                <img class="img-responsive" src="http://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp3img1.png" alt="">
+                                <img class="img-responsive choose-media-options" src="http://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp3img1.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
