event color coding

--- a/agile-frontend/WebContent/flatfull/tpl/calendar.html
+++ b/agile-frontend/WebContent/flatfull/tpl/calendar.html
@@ -434,7 +434,7 @@
 	       	</div>
 	       	<div class="line b-b b-light"></div>
 	       	{{#if event.status}}
-	       	<span style="position: relative;top: -4px;">{{agile_lng_translate 'admin-settings-users' 'status'}}: {{event.status}}
+	       	<span class="text-cap" style="position: relative;top: -4px;">{{agile_lng_translate 'admin-settings-users' 'status'}}: {{event.status}}
 	       	</span>{{/if}}
 	       	<div><i class="icon-clock text-muted m-r-xs"></i>{{event_format_time event.start 'dd-mmm-yyyy HH:MM'}}
 				<div class="pull-right" style="width:10%;">
