Exit Campaign alert, unsave node

--- a/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
@@ -197,7 +197,7 @@
 		<div class="modal-dialog" style="width:500px;">
     		<div class="modal-content">
 				<div class="modal-header">
-					<button class="close" data-dismiss="modal">x</button>
+					<button class="close" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i></button>
 					<h3 class="modal-title">
 						<h6 id="popup-msg" style="margin:5px"><span style="color: green;">
 						{{agile_lng_translate 'Campaigns' 'campaign-saved-sucessfully'}}</span></h6>
