social icons issue fixed in emailbuilder

--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/social-links.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/social-links.html
@@ -13,35 +13,35 @@
                 <tbody>
                     <tr>
                         <td class="social" align="center" style="padding: 15px 50px 15px 50px;">
-                            <a href="" style="border: none; text-decoration: none" class="facebook">
+                            <a href="#" style="border: none; text-decoration: none" class="facebook">
                                 <img border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/facebook.png" width="35" height="35"/>
 
                             </a>
-                            <a href="" style="border: none; text-decoration: none" class="twitter">
+                            <a href="#" style="border: none; text-decoration: none" class="twitter">
 
                                 <img border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/twitter.png" width="35" height="35"/>
 
 
                             </a>
-                            <a href="" style="border: none; text-decoration: none" class="linkedin">
+                            <a href="#" style="border: none; text-decoration: none" class="linkedin">
 
                                 <img  border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/linkedin.png" width="35" height="35"/>
 
 
                             </a>
-                            <a href="" style="border: none; text-decoration: none" class="youtube">
+                            <a href="#" style="border: none; text-decoration: none" class="youtube">
 
                                 <img border=0 src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/youtube.png" width="35" height="35"/>
 
 
                             </a>
-                            <a href="" style="border: none; text-decoration: none" class="instagram">
+                            <a href="#" style="border: none; text-decoration: none" class="instagram">
 
                                 <img border=0 src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/instagram.png" width="35" height="35"/>
 
 
                             </a>
-                            <a href="" style="border: none; text-decoration: none" class="pinterest">
+                            <a href="#" style="border: none; text-decoration: none" class="pinterest">
 
                                 <img border=0 src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/pinterest.png" width="35" height="35"/>
 
