color bcp classes added in css

--- a/agile-frontend/WebContent/flatfull/tpl/new-deal-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/new-deal-modal.html
@@ -134,7 +134,7 @@
                 <div class="bcp-select" id="FFE0B2" style="background-color: #FFE0B2;border: 1px solid #FF9800;"><div class=""></div></div>
                 <div class="bcp-select" id="FFCDD2" style="background-color: #FFCDD2;border: 1px solid #F44336;"><div class=""></div></div>
                 <div class="bcp-select" id="D7CCC8" style="background-color: #D7CCC8;border: 1px solid #795548;"><div class=""></div></div>
-                <div class="bcp-select" id="E0E0E0" style="background-color: #E0E0E0;border: 1px solid #9E9E9E;"><div class=""></div></div>
+                <div class="bcp-select" id="BDBDBD" style="background-color: #BDBDBD;border: 1px solid #9E9E9E;"><div class=""></div></div>
               </div>
             </div>
           </div>
