--- a/agile-frontend/WebContent/flatfull/tpl/activity-update-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/activity-update-modal.html
@@ -115,14 +115,14 @@
                     <input type="hidden" name="backgroundColor" id="backgroundColor"/></div>
                     <div id="checkboxes-div">
 
-                          <div class="bcp-select" id="#4bdfc" style="background-color: #a4bdfc;"><div class=""></div></div>
-                          <div class="bcp-select" id="#46d6db" style="background-color: #46d6db;"><div class=""></div></div>
-                          <div class="bcp-select" id="#7ae7bf" style="background-color: #7ae7bf;"><div class=""></div></div>
-                          <div class="bcp-select" id="#fbd75b" style="background-color: #fbd75b;"><div class=""></div></div>
-                          <div class="bcp-select" id="#ffb878" style="background-color: #ffb878;"><div class=""></div></div>
-                          <div class="bcp-select" id="#ff887c" style="background-color: #ff887c;"><div class=""></div></div>
-                          <div class="bcp-select" id="#dbadff" style="background-color: #dbadff;"><div class=""></div></div>
-                          <div class="bcp-select" id="#e1e1e1" style="background-color: #e1e1e1;"><div class=""></div></div>
+                          <div class="bcp-select" id="4bdfc" style="background-color: #a4bdfc;"><div class=""></div></div>
+                          <div class="bcp-select" id="46d6db" style="background-color: #46d6db;"><div class=""></div></div>
+                          <div class="bcp-select" id="7ae7bf" style="background-color: #7ae7bf;"><div class=""></div></div>
+                          <div class="bcp-select" id="fbd75b" style="background-color: #fbd75b;"><div class=""></div></div>
+                          <div class="bcp-select" id="ffb878" style="background-color: #ffb878;"><div class=""></div></div>
+                          <div class="bcp-select" id="ff887c" style="background-color: #ff887c;"><div class=""></div></div>
+                          <div class="bcp-select" id="dbadff" style="background-color: #dbadff;"><div class=""></div></div>
+                          <div class="bcp-select" id="e1e1e1" style="background-color: #e1e1e1;"><div class=""></div></div>
                         </div>
 
                     </div>
