documents color changed

--- a/agile-frontend/WebContent/flatfull/tpl/upload-document-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/upload-document-modal.html
@@ -125,8 +125,8 @@
           </div>
           </div>
           <div class="col-md-3" style="padding-left:0px;">
-           <div class="panel wrapper p-b-xs">
-               <h4 class="m-t-none font-thin">
+           <div class="wrapper p-b-xs">
+               <h4 class="m-t-none">
                    {{agile_lng_translate 'documents' 'document-what-are-docs-title'}}
                </h4>
                
