--- a/agile-frontend/WebContent/flatfull/tpl/opportunities-by-milestones.html
+++ b/agile-frontend/WebContent/flatfull/tpl/opportunities-by-milestones.html
@@ -320,19 +320,19 @@
       	{{else}}
       		{{#if milestone_changed_time}}
       			<div style="cursor:default;" class="pull-left inline-block deal_won_date" id="deal_won_date_{{id}}" data-toggle="tooltip" title="{{agile_lng_translate 'deal-view' 'won-date'}}">
-      				<small>{{epochToHumanDateInFormat milestone_changed_time}}</small>
+      				<small style="color:#777 !important;">{{epochToHumanDateInFormat milestone_changed_time}}</small>
       			</div>
       			<div class="clearfix"></div>
       		{{else}}
       			<div style="cursor:default;" class="pull-left inline-block hide deal_won_date" id="deal_won_date_{{id}}" data-toggle="tooltip" title="{{agile_lng_translate 'deal-view' 'won-date'}}">
-      				<small></small>
+      				<small style="color:#777 !important;"></small>
       			</div>
       			<div class="clearfix"></div>
       		{{/if}}
 		{{/if}}
 	{{else}}
 		<div style="cursor:default;" class="pull-left inline-block hide deal_won_date" id="deal_won_date_{{id}}" data-toggle="tooltip" title="{{agile_lng_translate 'deal-view' 'won-date'}}">
-      		<small></small>
+			<small style="color:#777 !important;"></small>
       	</div>
       	<div class="clearfix"></div>
 	{{/if_won_milestone}}
