documents new theme issue fix

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings.html
@@ -80,8 +80,8 @@
 
 <div class="wrapper-md agile-p-t-xs">
 <div class="{{#isNewTheme}}{{else}}row{{/isNewTheme}}">
-<div id="documents_collection_container" class="col-md-9 col-sm-9" ></div>
-			<div class="tabs" id="prefs-tabs-content"></div>
+<div id="documents_collection_container" class="col-md-9 col-sm-9 " ></div>
+			<div class="tabs documents-collection" id="prefs-tabs-content"></div>
     </div>
     </div>
     </div>
