fatmenu username line height issue fixed

--- a/agile-frontend/WebContent/flatfull/header.html
+++ b/agile-frontend/WebContent/flatfull/header.html
@@ -648,7 +648,7 @@ color: #78909c !important;
 									 </a>
 								<ul class="dropdown-menu animated fadeInRight w" role="menu">
 									<li>
-										<a href='#user-prefs' class="b-b p-r-none">
+										<a href='#user-prefs' class="b-b p-r-none username">
 											<div class="pull-left text-ellipsis w-auto hidden-sm hidden-md" style="max-width:210px;clear: both;"><span class="hidden-sm hidden-md text-head-black"><%=SafeHtmlUtil.sanitize(domainUser.name)%></span></div>
 											<span class="text-sm text-ellipsis block" style="clear: both;"> <b><%=user.getEmail()%></b></span>
 										</a>
