event color coding

--- a/agile-frontend/WebContent/flatfull/tpl/activity-update-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/activity-update-modal.html
@@ -115,7 +115,7 @@
                     <input type="hidden" name="backgroundColor" id="backgroundColor"/></div>
                     <div id="checkboxes-div">
 
-                          <div class="bcp-select" id="4bdfc" style="background-color: #a4bdfc;"><div class=""></div></div>
+                          <div class="bcp-select" id="a4bdfc" style="background-color: #a4bdfc;"><div class=""></div></div>
                           <div class="bcp-select" id="46d6db" style="background-color: #46d6db;"><div class=""></div></div>
                           <div class="bcp-select" id="7ae7bf" style="background-color: #7ae7bf;"><div class=""></div></div>
                           <div class="bcp-select" id="fbd75b" style="background-color: #fbd75b;"><div class=""></div></div>
