--- a/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
@@ -54,7 +54,7 @@
 <div class="modal-dialog">
     <div class="modal-content">
 		<div class="modal-header">
-			<button class="close" data-dismiss="modal">x</button>
+			<button class="close" data-dismiss="modal"><i class="material-icons" style="font-size: 0.8em;padding-top: 5px;">close</i></button>
 			<h3 class="modal-title"><i class="icon-file-text"></i> {{title}} </h3>
 		</div>
 		<div class="modal-body">
