summer note editor

--- a/agile-frontend/WebContent/flatfull/tpl/settings/settings-onlineschedule-prefs.html
+++ b/agile-frontend/WebContent/flatfull/tpl/settings/settings-onlineschedule-prefs.html
@@ -326,6 +326,8 @@
 											</label>
 											<div class="controls col-sm-9 ">
 												<div class="online_summer_note"></div>
+												<span id="image_format_error" class="text-danger"></span>
+												<span class="text-muted help-block m-b-none">{{agile_lng_translate 'prefs-online-calendar' 'tooltip_message'}}</span>
 												<span class="text-muted help-block m-b-none">{{agile_lng_translate 'prefs-online-calendar' 'appears-on-your-scheduled-page'}}</span>
 											</div>
 										</div>
