cust field creation for deals during import

--- a/agile-frontend/WebContent/flatfull/tpl/import-contacts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/import-contacts.html
@@ -756,6 +756,7 @@
 		{{#each custom_fields}}
 			<option class="CUSTOM" value="properties_{{this.field_label}}">{{this.field_label}}</option>
 		{{/each}}
+		<option value="properties__ignore_" class="text-info add-custom-field-from-import">-{{agile_lng_translate 'admin-settings-custom-fields' 'add-custom-field'}}-</option>
 </optgroup>
 {{/if}}
 </select>
